# model_indev

./: .gitmodules  CMakeLists.txt  CMakeUserPresets.json  README.md
cmake/Modules/: FindNetCDF.cmake
sims/Biogeochemistry_toy_case/: fabm.yaml  main.yaml
sims/Physics_only_North_Sea/: config_launch.json  main.yaml
sims/Pulse_detritus_North_Sea/: bio_input.yaml  events.yaml  fabm.yaml  main.yaml
sims/Tracer_removal_NS/: bio_input.yaml  events.yaml  fabm.yaml  launch_model.sh  main.yaml
sims/Water_bioch_North_Sea/: fabm.yaml  main.yaml
sims/test_dev/: config_launch.json  launch_model.sh  main.yaml
src/: main.f90  shelfseas.f90
src/bio/: bio_inputs.F90  bio_main.F90  bio_params.F90  bio_types.F90  event_manager.F90  event_types.F90  initial_profiles.F90  light.F90  molecular_diffusion.F90  sediment.F90  sediment_diffusion.F90  sediment_exchange.F90  vertical_transport.F90
src/bio/extensions/: event_utils.F90  tracer_pulse.F90  tracer_removal.F90
src/grid/: grid_builders.F90
src/input/: forcing_manager.f90  load_forcing.F90
src/io/: data_loader.F90  data_loader_netcdf.F90  data_loader_text.F90  data_manager.F90  data_types.F90  final_state_writer.F90  forcing_manager.f90  load_forcing.F90  netcdf_io.F90  output_manager.F90  output_static.F90  output_writer.F90  read_config_yaml.F90  read_forcing_ncdata.F90  state_loader.F90  text_parser.F90  tidal_parameters_readers.F90
src/numerics/: nan_checks.F90  numerical_stability.F90  tridiagonal.F90
src/physics/: EOS_eqn.F90  boundary_types.F90  freshwater_fluxes.F90  heat_fluxes.F90  momentum_eqns.F90  phys_var_registry.F90  physics_driver.F90  physics_driver_example_struct.txt  physics_forcing.F90  physics_main.F90  physics_params.F90  physics_types.F90  pressure.F90  radiation.F90  read_forcing_ncdata.F90  tidal.f90  tidal_parameters_readers.F90  turbulence.F90  vertical_mixing.F90
src/physics/input/: load_forcing.F90  read_forcing_ncdata.F90  tidal_parameters_readers.F90
src/tests/: test_load_forcing.F90
src/time/: calendar_types.F90  cf_time_utils.F90  sim_clocks.F90  sim_timer.F90  time_types.F90  time_utils.F90
src/utils/: array_utils.F90  find_utils.F90  geo_utils.F90  grid_builders.F90  grids.F90  path_utils.F90  precision_types.F90  precision_utils.F90  stats_utils.F90  str_utils.F90  trigonometrics.F90  validation_utils.F90  variable_registry.F90
